tests/errors/generic-struct-infer-conflict.ari
struct Pair[T] {
  left: T,
  right: T,
}

fn main() -> i64 {
  let pair = Pair { left: 1, right: true };
  return pair.left;
}
